set02/problem04_compile_errors.txt
Compilation started at 10/30/2023, 8:21:35 PM
Compilation finished at 10/30/2023, 8:21:39 PM
Compilation started at 10/30/2023, 8:22:57 PM
Compilation finished at 10/30/2023, 8:23:01 PM
Compilation started at 10/30/2023, 8:24:02 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem04.c: In function 'main':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem04.c:15:19: warning: passing argument 2 of 'input_array' from incompatible pointer type [-Wincompatible-pointer-types]
     input_array(n,a);
                   ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem04.c:6:6: note: expected 'int **' but argument is of type 'int *'
 void input_array(int n, int *a[n]);
      ^~~~~~~~~~~
Compilation finished at 10/30/2023, 8:24:06 PM
Compilation started at 10/30/2023, 8:24:41 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem04.c: In function 'main':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem04.c:15:19: warning: passing argument 2 of 'input_array' from incompatible pointer type [-Wincompatible-pointer-types]
     input_array(n,&a);
                   ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem04.c:6:6: note: expected 'int **' but argument is of type 'int (*)[(sizetype)(n)]'
 void input_array(int n, int *a[n]);
      ^~~~~~~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem04.c: In function 'sum_composite_numbers':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem04.c:44:9: error: expected expression at end of input
         for(int j=1;j<=a[n];j++)
         ^~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem04.c:44:9: error: expected declaration or statement at end of input
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem04.c:44:9: error: expected declaration or statement at end of input
Compilation finished at 10/30/2023, 8:24:43 PM
Compilation started at 10/30/2023, 8:28:48 PM
Compilation finished at 10/30/2023, 8:28:51 PM
Compilation started at 10/30/2023, 8:40:48 PM
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../libmingw32.a(main.o):(.text.startup+0xa0): undefined reference to `WinMain@16'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 10/30/2023, 8:40:52 PM
Compilation started at 10/30/2023, 8:42:28 PM
Compilation finished at 10/30/2023, 8:42:32 PM
Compilation started at 10/30/2023, 8:47:34 PM
Compilation finished at 10/30/2023, 8:47:38 PM
Compilation started at 10/30/2023, 8:48:15 PM
Compilation finished at 10/30/2023, 8:48:18 PM
Compilation started at 10/30/2023, 8:49:36 PM
Compilation finished at 10/30/2023, 8:49:40 PM
Compilation started at 10/31/2023, 12:06:14 PM
Compilation finished at 10/31/2023, 12:06:19 PM
Compilation started at 10/31/2023, 12:07:02 PM
Compilation finished at 10/31/2023, 12:07:05 PM
Compilation started at 10/31/2023, 12:21:01 PM
Compilation finished at 10/31/2023, 12:21:04 PM
Compilation started at 10/31/2023, 12:24:42 PM
Compilation finished at 10/31/2023, 12:24:46 PM
Compilation started at 10/31/2023, 12:28:35 PM
Compilation finished at 10/31/2023, 12:28:39 PM
